<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="no_cancer_history">No Prediction Cancer History</string>
    <string name="history">History</string>
    <string name="your_result">Your Result</string>
    <string name="back">back</string>
    <string name="add">add</string>
</resources>